Fix minor bugs with MarkCommand Output commonly confused pairs of commands